--- a/index1.html
+++ b/index1.html
@@ -38,11 +38,9 @@
                     <a class="nav-link scrollto" href="/about">About Us</a>
                   </li>
                   <li>
-                    <a class="nav-link scrollto" href="/services">Services</a>
+                    <a class="nav-link scrollto" href="/products">Products</a>
                   </li>
-                  <li>
-                    <a class="nav-link scrollto" href="/subjects">Subjects</a>
-                  </li>
+                  
                   <li>
                     <a class="nav-link scrollto" href="/contactus">Contact Us</a>
                   </li>
